# scalator

./: .gitignore  config.py  create_revelator.py  fire_revelator.py  manager.py  nodedb.py  readme.md  requirements.txt  scalator.py  scalatorcmd.py  scalatord.py  setup.cfg  setup.py  task_manager.py  transform.py
config_scripts/init_d/: scalator
marathon_json/: cassandra_master.json  cassandra_slave.json  couchdb.json  docker.json  mariadb.json  memcached.json  opscenter.json  repcached.json  test.json  yrobla_cassandra.json  yrobla_cassandra_cluster.json  yrobla_rabbitmq.json
revelator_scripts/: transform.py
samples/: scalator.yaml
scalator/: create_revelator.py  manager.py  nodedb.py  nodeutils.py  scalator.py  scalatorcmd.py  scalatord.py  sshclient.py
scalator_scripts/: activity_informer.py  edit_languages.py  logging_queue.py  monitor.py  rabbit_receiver.py
templates/: rabbit_config
tests/: test_rabbit.py
