[metadata]
name = scalator
summary = Scalator engine
description-file =
    README.rst
author = Yolanda Robla
author-email = info@ysoft.biz
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    scalator = scalator.scalatorcmd:main
    scalatord = scalator.scalatord:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
